Fix mobile navigation logo alignment

--- a/app/components/Navigation.module.css
+++ b/app/components/Navigation.module.css
@@ -111,13 +111,14 @@
     }
 
     .logo {
-        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         margin-bottom: 0;
         margin-right: 5px;
         width: 40px;
         /* Smaller on mobile */
         height: 40px;
-        padding-top: 7.6px;
     }
 
     .link {
